--- a/requirements.txt
+++ b/requirements.txt
@@ -1,65 +1,70 @@
-# Core AI/ML Framework
+# Core dependencies
+pydantic>=2.0.0
+pydantic-settings>=2.0.0
+structlog>=23.0.0
+python-dotenv>=1.0.0
+
+# LangGraph and workflow orchestration
 langgraph>=0.2.0
 langchain>=0.2.0
-langchain-openai>=0.1.0
-langchain-community>=0.2.0
-openai>=1.50.0
-tiktoken>=0.6.0
+langchain-openai>=0.2.0
 
-# Multi-agent frameworks
-crewai>=0.50.0
-autogen>=0.9.5 #from 1.0.0
+# LLM and AI services
+openai>=1.0.0
+mistralai>=0.0.10
 
-# Web framework and API
-fastapi>=0.110.0
-uvicorn[standard]>=0.27.0
-pydantic>=2.6.0
-pydantic-settings>=2.2.0
-
-# Database and vector storage
-supabase>=2.3.0
-psycopg2-binary>=2.9.9
-pgvector>=0.2.4
-
-# Data processing and NLP
+# NLP and text processing
 spacy>=3.7.0
-transformers>=4.37.0
-torch>=2.2.0
-numpy>=1.26.0
-pandas>=2.2.0
+nltk>=3.8.0
 
-# News and data fetching
-feedparser>=6.0.10
-newspaper3k>=0.2.8
-requests>=2.32.0
-aiohttp>=3.9.0
-gdeltdoc>=0.1.0
+# Database and vector operations
+supabase>=2.0.0
+asyncpg>=0.29.0
+pgvector>=0.2.0
 
-# Translation and language processing
-deep-translator>=1.11.0
+# Translation services
+googletrans==4.0.0rc1
 langdetect>=1.0.9
-pycountry>=23.12.0
-country-converter>=1.0.0
-langcodes>=3.3.0
+aiohttp>=3.9.0
 
-# Text processing and similarity
-fuzzywuzzy>=0.18.0
-python-Levenshtein>=0.23.0
-rapidfuzz>=3.6.0
+# Embedding models
+sentence-transformers>=2.2.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
 
-# Utilities
-python-dotenv>=1.0.0
-structlog>=24.1.0
+# Data processing and analysis
+pandas>=2.0.0
+scipy>=1.10.0
+plotly>=5.15.0
+textblob>=0.17.1
+feedparser>=6.0.10
 tenacity>=8.2.0
-httpx>=0.27.0
-pydantic-extra-types>=2.6.0
 
-# Development dependencies (optional)
-pytest>=8.0.0
-pytest-asyncio>=0.23.0
-pytest-cov>=4.1.0
-pytest-mock>=3.12.0
-black>=24.1.0
-isort>=5.13.0
-flake8>=7.0.0
-mypy>=1.8.0 
+# Data sources and streaming
+websockets>=11.0.0
+asyncio-mqtt>=0.13.0
+redis>=4.5.0
+
+# FastAPI and web framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+
+# System monitoring
+psutil>=5.9.0
+
+# Testing
+pytest>=7.4.0
+pytest-asyncio>=0.21.0
+pytest-mock>=3.11.0
+httpx>=0.25.0
+
+# Development and linting
+black>=23.0.0
+isort>=5.12.0
+flake8>=6.0.0
+mypy>=1.5.0
+
+# Documentation
+mkdocs>=1.5.0
+mkdocs-material>=9.4.0 
