--- a/env.example
+++ b/env.example
@@ -1,15 +1,17 @@
 # LLM API Configuration
 
-# OpenAI Configuration (Primary LLM)
+# Mistral AI Configuration (Primary LLM)
+MISTRAL_API_KEY=your_mistral_api_key_here
+MISTRAL_MODEL=mistral-small
+MISTRAL_API_BASE=https://api.mistral.ai/v1
+MISTRAL_TEMPERATURE=0.0
+MISTRAL_MAX_TOKENS=4000
+
+# OpenAI Configuration (Alternative LLM)
 OPENAI_API_KEY=your_openai_api_key_here
 OPENAI_MODEL=gpt-4-turbo-preview
 OPENAI_TEMPERATURE=0.0
 OPENAI_MAX_TOKENS=4000
-
-# Mistral AI Configuration (Alternative LLM)
-MISTRAL_API_KEY=your_mistral_api_key_here
-MISTRAL_MODEL=mistral-small
-MISTRAL_API_BASE=https://api.mistral.ai/v1
 
 
 # Database Configuration (Supabase)
@@ -17,7 +19,7 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your_supabase_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 SUPABASE_DB_PASSWORD=your_database_password_here
-
+SUPABASE_DB_URL=your_database_connection_url
 
 # Google Custom Search (for news search)
 WEB_SEARCH_API_KEY=your_google_custom_search_api_key_here
