--- a/requirements.txt
+++ b/requirements.txt
@@ -180,6 +180,7 @@ pyasn1_modules==0.4.2
 pybase64==1.4.1
 pycodestyle==2.14.0
 pycountry==24.6.1
+tiktoken==0.7.0
 pycparser==2.22
 pydantic==2.11.7
 pydantic-extra-types==2.10.5
