added  Flashpoint config and hotpotquery from enviorment file.

--- a/env.example
+++ b/env.example
@@ -1,3 +1,10 @@
+#Flashpoint Configuration
+FLASHPOINT_MAX_ITERATIONS=10
+TARGET_FLASHPOINT=20
+
+#Hotspot detection query prepend
+HOTSPOT_QUERY=global tension last 24 hours
+
 # LLM API Configuration
 
 # Mistral AI Configuration (Primary LLM)
