--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ appdirs==1.4.4
 asttokens==3.0.0
 asyncer==0.0.8
 asyncpg==0.30.0
+asyncio-throttle>=1.0.2
 attrs==25.3.0
 autogen==0.9.5
 babel==2.17.0
