--- a/env.example
+++ b/env.example
@@ -35,6 +35,7 @@ GOOGLE_SEARCH_BASE_URL=google_search_base_url
 
 # GDELT API (for global events)
 GDELT_API_KEY=your_gdelt_api_key_here
+GDELT_API_URL="https://masx-ai-gdelt-api.onrender.com/api"
 
 # Translation Services
 GOOGLE_TRANSLATE_API_KEY=your_google_translate_api_key_here
