1) 2 seperate gdelt services 2)  more logs in gdelt fetcher agent

--- a/env.example
+++ b/env.example
@@ -35,7 +35,8 @@ GOOGLE_SEARCH_BASE_URL=google_search_base_url
 
 # GDELT API (for global events)
 GDELT_API_KEY=your_gdelt_api_key_here
-GDELT_API_URL="https://masx-ai-gdelt-api.onrender.com/api"
+GDELT_API_URL="https://masx-ai-gdelt-api.onrender.com"
+GDELT_API_URL_1="https://masx-ai-gdelt-1.onrender.com"
 
 # Translation Services
 GOOGLE_TRANSLATE_API_KEY=your_google_translate_api_key_here
