--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 ag2==0.9.5
--e git+https://github.com/AteetVatan/ai-global-signal-grid@a2adf0b144078a1a1fc0271f93f9774c5a56e949#egg=ai_global_signal_grid&subdirectory=..\..\..\modules\ai-global-signal-grid
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.13
 aiosignal==1.4.0
@@ -181,7 +180,6 @@ pyasn1_modules==0.4.2
 pybase64==1.4.1
 pycodestyle==2.14.0
 pycountry==24.6.1
-tiktoken==0.7.0
 pycparser==2.22
 pydantic==2.11.7
 pydantic-extra-types==2.10.5
@@ -271,8 +269,8 @@ watchdog==6.0.0
 watchfiles==1.1.0
 wcwidth==0.2.13
 weasel==0.4.1
-websocket-client==1.8.0
-websockets==15.0.1
+# websocket-client==1.8.0  # Commented out WebSocket functionality
+# websockets==15.0.1  # Commented out WebSocket functionality
 wrapt==1.17.2
 xxhash==3.5.0
 yarl==1.20.1
