--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,4 @@ src/flashpoints/flashpoint-2025-07-25-6.json
 src/flashpoints/flashpoint-2025-07-25-7.json
 src/app/debug_data/flashpoint_21_07_2025.json
 src/app/debug_data/flashpoint_25_07_2025.json
+jobs.db
