--- a/requirements.txt
+++ b/requirements.txt
@@ -1,281 +1,99 @@
-ag2==0.9.5
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.13
-aiosignal==1.4.0
-annotated-types==0.7.0
-anyio==4.9.0
-appdirs==1.4.4
-asttokens==3.0.0
-asyncer==0.0.8
-asyncpg==0.30.0
+# =============================================================================
+# CORE AI/ML FRAMEWORKS
+# =============================================================================
+langgraph>=0.2.0
+langchain>=0.2.0
+langchain-openai>=0.1.0
+langchain-community>=0.2.0
+langchain-core>=0.3.0
+openai>=1.50.0
+tiktoken>=0.6.0
+
+# =============================================================================
+# MULTI-AGENT FRAMEWORKS
+# =============================================================================
+crewai>=0.50.0
+autogen>=0.9.5
+
+# =============================================================================
+# WEB FRAMEWORK AND API
+# =============================================================================
+fastapi>=0.110.0
+uvicorn[standard]>=0.27.0
+pydantic>=2.6.0
+pydantic-settings>=2.2.0
+starlette>=0.46.0
+
+# =============================================================================
+# DATABASE AND VECTOR STORAGE
+# =============================================================================
+supabase>=2.3.0
+psycopg2-binary>=2.9.9
+pgvector>=0.2.4
+asyncpg>=0.30.0
+
+# =============================================================================
+# DATA PROCESSING AND NLP
+# =============================================================================
+spacy>=3.7.0
+transformers>=4.37.0
+torch>=2.2.0
+numpy>=1.26.0
+pandas>=2.2.0
+scikit-learn>=1.7.0
+scipy>=1.16.0
+sentence-transformers>=5.0.0
+
+# =============================================================================
+# NEWS AND DATA FETCHING
+# =============================================================================
+feedparser>=6.0.10
+newspaper3k>=0.2.8
+requests>=2.32.0
+aiohttp>=3.9.0
+gdeltdoc>=0.1.0
+
+# =============================================================================
+# TRANSLATION AND LANGUAGE PROCESSING
+# =============================================================================
+deep-translator>=1.11.0
+langdetect>=1.0.9
+pycountry>=23.12.0
+country-converter>=1.0.0
+langcodes>=3.3.0
+
+# =============================================================================
+# TEXT PROCESSING AND SIMILARITY
+# =============================================================================
+fuzzywuzzy>=0.18.0
+python-Levenshtein>=0.23.0
+rapidfuzz>=3.6.0
+
+# =============================================================================
+# UTILITIES
+# =============================================================================
+python-dotenv>=1.0.0
+structlog>=24.1.0
+tenacity>=8.2.0
+httpx>=0.27.0
+pydantic-extra-types>=2.6.0
+nest-asyncio>=1.5.0
 asyncio-throttle>=1.0.2
-attrs==25.3.0
-autogen==0.9.5
-babel==2.17.0
-backoff==2.2.1
-backrefs==5.9
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-black==25.1.0
-blinker==1.9.0
-blis==1.3.0
-build==1.2.2.post1
-cachetools==5.5.2
-catalogue==2.0.10
-certifi==2025.6.15
-cffi==1.17.1
-cfgv==3.4.0
-charset-normalizer==3.4.2
-chromadb==1.0.15
-click==8.2.1
-cloudpathlib==0.21.1
-colorama==0.4.6
-coloredlogs==15.0.1
-confection==0.1.5
-country_converter==1.3
-coverage==7.9.2
-crewai==0.140.0
-cryptography==45.0.5
-cssselect==1.3.0
-cymem==2.0.11
-dataclasses-json==0.6.7
-decorator==5.2.1
-deep-translator==1.11.4
-deprecation==2.1.0
-diskcache==5.6.3
-distlib==0.3.9
-distro==1.9.0
-docker==7.1.0
-docstring_parser==0.16
-durationpy==0.10
-et_xmlfile==2.0.0
-executing==2.2.0
-fastapi==0.115.14
-feedfinder2==0.0.4
-feedparser==6.0.11
-filelock==3.18.0
-flake8==7.3.0
-flatbuffers==25.2.10
-frozenlist==1.7.0
-fsspec==2025.5.1
-fuzzywuzzy==0.18.0
-gdeltdoc==1.12.0
-ghp-import==2.1.0
-google-auth==2.40.3
-googleapis-common-protos==1.70.0
-gotrue==2.12.3
-greenlet==3.2.3
-grpcio==1.73.1
-h11==0.16.0
-h2==4.2.0
-hpack==4.1.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.1
-huggingface-hub==0.33.2
-humanfriendly==10.0
-hyperframe==6.1.0
-identify==2.6.12
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-iniconfig==2.1.0
-instructor==1.9.0
-ipython==9.4.0
-ipython_pygments_lexers==1.1.1
-isort==6.0.1
-jedi==0.19.2
-jieba3k==0.35.1
-Jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.1
-json5==0.12.0
-json_repair==0.25.2
-jsonpatch==1.33
-jsonpickle==4.1.1
-jsonpointer==3.0.0
-jsonref==1.1.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-kubernetes==33.1.0
-langchain==0.3.26
-langchain-community==0.3.27
-langchain-core==0.3.68
-langchain-openai==0.3.27
-langchain-text-splitters==0.3.8
-langcodes==3.5.0
-langdetect==1.0.9
-langgraph==0.5.1
-langgraph-checkpoint==2.1.0
-langgraph-prebuilt==0.5.2
-langgraph-sdk==0.1.72
-langsmith==0.4.4
-language_data==1.3.0
-Levenshtein==0.27.1
-litellm==1.72.6
-lxml==6.0.0
-marisa-trie==1.2.1
-Markdown==3.8.2
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib-inline==0.1.7
-mccabe==0.7.0
-mdurl==0.1.2
-mergedeep==1.3.4
-mkdocs==1.6.1
-mkdocs-get-deps==0.2.0
-mkdocs-material==9.6.15
-mkdocs-material-extensions==1.3.1
-mmh3==5.1.0
-mpmath==1.3.0
-multidict==6.6.3
-murmurhash==1.0.13
-mypy==1.16.1
-mypy_extensions==1.1.0
-narwhals==1.45.0
-networkx==3.5
-newspaper3k==0.2.8
-nltk==3.9.1
-nodeenv==1.9.1
-numpy==2.3.1
-oauthlib==3.3.1
-onnxruntime==1.22.0
-openai==1.93.0
-openpyxl==3.1.5
-opentelemetry-api==1.34.1
-opentelemetry-exporter-otlp-proto-common==1.34.1
-opentelemetry-exporter-otlp-proto-grpc==1.34.1
-opentelemetry-exporter-otlp-proto-http==1.34.1
-opentelemetry-proto==1.34.1
-opentelemetry-sdk==1.34.1
-opentelemetry-semantic-conventions==0.55b1
-orjson==3.10.18
-ormsgpack==1.10.0
-overrides==7.7.0
-packaging==24.2
-paginate==0.5.7
-pandas==2.3.0
-parso==0.8.4
-pathspec==0.12.1
-pdfminer.six==20250506
-pdfplumber==0.11.7
-pgvector==0.4.1
-pillow==11.3.0
-platformdirs==4.3.8
-plotly==6.2.0
-pluggy==1.6.0
-postgrest==1.1.1
-posthog==5.4.0
-pre_commit==4.2.0
-preshed==3.0.10
-prompt_toolkit==3.0.51
-propcache==0.3.2
-protobuf==5.29.5
-psycopg2-binary==2.9.10
-pure_eval==0.2.3
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pybase64==1.4.1
-pycodestyle==2.14.0
-pycountry==24.6.1
-pycparser==2.22
-pydantic==2.11.7
-pydantic-extra-types==2.10.5
-pydantic-settings==2.10.1
-pydantic_core==2.33.2
-pyflakes==3.4.0
-Pygments==2.19.2
-PyJWT==2.10.1
-pymdown-extensions==10.16
-pypdfium2==4.30.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyreadline3==3.5.4
-pytest==8.4.1
-pytest-asyncio==1.0.0
-pytest-cov==6.2.1
-pytest-mock==3.14.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-Levenshtein==0.27.1
-pytz==2025.2
-pyvis==0.3.2
-pywin32==310
-PyYAML==6.0.2
-pyyaml_env_tag==1.1
-RapidFuzz==3.13.0
-realtime==2.5.3
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-requests-file==2.1.0
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==14.0.0
-rpds-py==0.26.0
-rsa==4.9.1
-safetensors==0.5.3
-scikit-learn==1.7.0
-scipy==1.16.0
-sentence-transformers==5.0.0
-setuptools==80.9.0
-sgmllib3k==1.0.0
-shellingham==1.5.4
-six==1.17.0
-smart_open==7.3.0.post1
-sniffio==1.3.1
-soupsieve==2.7
-spacy==3.8.7
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.41
-srsly==2.5.1
-stack-data==0.6.3
-starlette==0.46.2
-storage3==0.12.0
-StrEnum==0.4.15
-structlog==25.4.0
-supabase==2.16.0
-supafunc==0.10.1
-sympy==1.14.0
-tenacity==9.1.2
-termcolor==3.1.0
-textblob==0.19.0
-thinc==8.3.6
-threadpoolctl==3.6.0
-tiktoken==0.9.0
-tinysegmenter==0.3
-tldextract==5.3.0
-tokenizers==0.21.2
-tomli==2.2.1
-tomli_w==1.2.0
-torch==2.7.1
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.53.1
-typer==0.16.0
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
-tzdata==2025.2
-urllib3==2.5.0
-uv==0.7.19
-uvicorn==0.35.0
-virtualenv==20.31.2
-wasabi==1.1.3
-watchdog==6.0.0
-watchfiles==1.1.0
-wcwidth==0.2.13
-weasel==0.4.1
-# websocket-client==1.8.0  # Commented out WebSocket functionality
-# websockets==15.0.1  # Commented out WebSocket functionality
-wrapt==1.17.2
-xxhash==3.5.0
-yarl==1.20.1
-zipp==3.23.0
-zstandard==0.23.0
-lxml_html_clean==0.1.1
-# Scheduler dependencies
+
+# =============================================================================
+# DEVELOPMENT AND TESTING
+# =============================================================================
+pytest>=8.0.0
+pytest-asyncio>=0.23.0
+pytest-cov>=4.1.0
+pytest-mock>=3.12.0
+black>=24.1.0
+isort>=5.13.0
+flake8>=7.0.0
+mypy>=1.8.0
+pre-commit>=3.6.0
+
+# =============================================================================
+# SCHEDULER DEPENDENCIES
+# =============================================================================
 apscheduler>=3.10,<4.0
