--- a/.github/workflows/api-deploy-to-hf.yml
+++ b/.github/workflows/api-deploy-to-hf.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
         cd deploy_dir
         git init
-        git config --global user.email "you@masxai.com"
+        git config --global user.email "ateetph@gmail.com"
         git config --global user.name "ateetvatan"
         git remote add hf https://AteetVatan:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/AteetVatan/masx-gsg-api
         git add .
