modified git deploy yml

--- a/.github/workflows/api-deploy-to-hf.yml
+++ b/.github/workflows/api-deploy-to-hf.yml
@@ -2,27 +2,30 @@ name: Deploy MASX GSG API to Hugging Face
 
 on:
   push:
-    branches: [main]  # or your desired deployment branch
+    branches: [main]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout repo
+    - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Copy api_server contents to temp dir
+    - name: Copy api_server to clean deploy dir
       run: |
         mkdir deploy_dir
-        cp -r api_server/* deploy_dir/
+        rsync -av --exclude='.git' api_server/ deploy_dir/
 
-    - name: Configure Git for Hugging Face
+    - name: Push deploy_dir to Hugging Face Space
+      env:
+        HF_TOKEN: ${{ secrets.HF_TOKEN }}
       run: |
         cd deploy_dir
         git init
-        git config --global user.email "ateetph@gmail.com"
-        git config --global user.name "ateetvatan"
-        git remote add hf https://AteetVatan:${{ secrets.HF_TOKEN }}@huggingface.co/spaces/AteetVatan/masx-gsg-api
+        git config user.email "ateetph@gmail.com"
+        git config user.name "ateetvatan"
+        git remote add origin https://AteetVatan:${HF_TOKEN}@huggingface.co/spaces/AteetVatan/masx-gsg-api
         git add .
-        git commit -m "Auto-deploy api_server to HF Space"
-        git push hf master --force
+        git commit -m "Auto-deploy api_server to Hugging Face"
+        git push origin master --force
