--- a/api_server/Dockerfile
+++ b/api_server/Dockerfile
@@ -15,4 +15,5 @@ COPY . .
 EXPOSE 7860
 
 # Run FastAPI app via uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "7860"]
+#CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "7860"]
+CMD ["python", "main.py"]
