--- a/api_server/Dockerfile
+++ b/api_server/Dockerfile
@@ -17,3 +17,6 @@ EXPOSE 7860
 # Run FastAPI app via uvicorn
 #CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "7860"]
 CMD ["python", "main.py"]
+
+# Expose port required by Render (optional, doesn't affect behavior)
+EXPOSE 8000
